--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "typescript": "5.0.3",
+    "undici": "^6.18.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
